feat(jvmlog): add batch 7 views + template cells for 18 previously uncovered views
New views (5): safepoint-sync-hotspot, zgc-liveness-trend, shenandoah-concurrent-efficiency,
heap-before-after-delta, gc-overhead-trend.

Template cells added for existing views: gc-summary, gc-pause-by-type, gc-cumulative-pause,
pause-percentiles-by-cause, gc-phase-breakdown, gc-init-summary, heap-snapshot-raw,
zgc-cycle, zgc-director-summary, stringdedup-summary, gc-error-summary, gc-interval,
gc-pause-summary, unknown-summary, g1-heap-expansion, g1-mixed-gc, g1-mixed-gc-summary,
plus the 5 new batch 7 views.

Tests: 155 passing.